--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@
 
     <!--  Creative Section Start -> -> -> -> -> -> -> -> -> ->  -->
     <section class="section images-section" id="images-section">
-      <!-- <div class="cursor_anim"></div> -->
       <div class="heading-section">
         <h2 class="common-heading">
           We Create High Quility Web <br />
@@ -112,7 +111,7 @@
         <div class="column-box">
           <div class="grid grid-two-column">
             <div class="creative-section-img">
-              <img src="images/img33.png" alt="img-data" />
+              <img src="images/img33.png" alt="img-data" loading="lazy" />
             </div>
             <div class="creative-section-para">
               <h3 style="margin-bottom: 1rem">Desktop Dev</h3>
@@ -137,7 +136,7 @@
               </p>
             </div>
             <div class="creative-section-img">
-              <img src="images/img34.png" alt="img-data" />
+              <img src="images/img34.png" alt="img-data" loading="lazy" />
             </div>
           </div>
         </div>
@@ -149,7 +148,7 @@
     <section class="section parallax-section">
       <div class="grid grid-two-column">
         <div class="parallax-img">
-          <img src="images/phone-min.gif" alt="img-data" />
+          <img src="images/phone-min.gif" alt="img-data" loading="lazy" />
         </div>
         <div class="parallax-data">
           <h2>
@@ -184,7 +183,7 @@
         <div class="grid grid-three-column">
           <div class="business-box">
             <div class="img-box">
-              <img src="images/link-min.gif" alt="img-data" />
+              <img src="images/link-min.gif" alt="img-data" loading="lazy" />
             </div>
             <div class="business-box-md-row">
               <h3>Link Building</h3>
@@ -201,7 +200,7 @@
           </div>
           <div class="business-box shadow-box">
             <div class="img-box">
-              <img src="images/speaker.gif" alt="img-data" />
+              <img src="images/speaker.gif" alt="img-data" loading="lazy" />
             </div>
             <div class="business-box-md-row">
               <h3>Content marketing</h3>
@@ -218,7 +217,7 @@
           </div>
           <div class="business-box">
             <div class="img-box">
-              <img src="images/seo-min.gif" alt="img-data" />
+              <img src="images/seo-min.gif" alt="img-data" loading="lazy" />
             </div>
             <div class="business-box-md-row">
               <h3>On Page SEO</h3>
@@ -264,25 +263,25 @@
         <div class="row">
           <div class="grid grid-four-column project-img">
             <div class="img-overlay">
-              <img src="images/portfolio-7.jpg" alt="img-data" />
+              <img src="images/portfolio-7.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">Web 3</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-2.jpg" alt="img-data" />
+              <img src="images/portfolio-2.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">App 3</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-4.jpg" alt="img-data" />
+              <img src="images/portfolio-4.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">Web 4</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-9.jpg" alt="img-data" />
+              <img src="images/portfolio-9.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">App 2</a>
               </div>
@@ -290,25 +289,25 @@
           </div>
           <div class="grid grid-four-column project-img">
             <div class="img-overlay">
-              <img src="images/portfolio-4.jpg" alt="img-data" />
+              <img src="images/portfolio-4.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">App 4 3</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-7.jpg" alt="img-data" />
+              <img src="images/portfolio-7.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">Web 5</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-9.jpg" alt="img-data" />
+              <img src="images/portfolio-9.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">Web 3</a>
               </div>
             </div>
             <div class="img-overlay">
-              <img src="images/portfolio-2.jpg" alt="img-data" />
+              <img src="images/portfolio-2.jpg" alt="img-data" loading="lazy" />
               <div class="overlay">
                 <a href="#">Web 4</a>
               </div>
@@ -330,7 +329,7 @@
           <div class="grid grid-two-column">
             <div class="team-box">
               <div class="img-box">
-                <img src="images/team-1.jpg" alt="img-data" />
+                <img src="images/team-1.jpg" alt="img-data" loading="lazy" />
               </div>
               <div class="info">
                 <h3>John Duo</h3>
@@ -344,7 +343,7 @@
             </div>
             <div class="team-box">
               <div class="img-box">
-                <img src="images/team-2.jpg" alt="img-data" />
+                <img src="images/team-2.jpg" alt="img-data" loading="lazy" />
               </div>
               <div class="info">
                 <h3>Angellina Yu</h3>
@@ -362,7 +361,7 @@
           <gird class="grid grid-two-column">
             <div class="team-box">
               <div class="img-box">
-                <img src="images/team-3.jpg" alt="img-data" />
+                <img src="images/team-3.jpg" alt="img-data" loading="lazy" />
               </div>
               <div class="info">
                 <h3>Harry Karrty</h3>
@@ -376,7 +375,7 @@
             </div>
             <div class="team-box">
               <div class="img-box">
-                <img src="images/team-4.jpg" alt="img-data" />
+                <img src="images/team-4.jpg" alt="img-data" loading="lazy" />
               </div>
               <div class="info">
                 <h3>Aaliya Ujun</h3>
